ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: shop.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 9091
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
